--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,1 +1,46 @@
-// .main-header {}
+@import "../global/variables.scss";
+
+.main-header {
+  min-height: 60px;
+}
+
+.main-header__wrapper {
+  position: relative;
+
+  background-color: #ffffff;
+  width: 320px;
+  margin: 0 auto;
+
+  @media (max-width: $width-mobile) {
+    position: relative;
+  }
+
+  @media (min-width: $width-tablet) {
+    width: 768px;
+  }
+
+  @media (min-width: $width-desktop) {
+    width: 1440px;
+  }
+}
+
+.main-header__logo {
+  display: inline-flex;
+  margin-left: 6px;
+  padding: 12px 14px;
+}
+
+.main-header__logo-image {
+  display: block;
+}
+
+.main-header__text {
+  display: none;
+  width: 126px;
+  font-size: 12px;
+  line-height: 16px;
+
+  @media (min-width: $width-desktop) {
+    display: block;
+  }
+}
