--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -2,8 +2,8 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/montserrat-regular.woff2") format("woff2"),
-    url("../fonts/montserrat-regular.woff") format("woff");
+  src: url("../../fonts/montserrat-regular.woff2") format("woff2"),
+    url("../../fonts/montserrat-regular.woff") format("woff");
   font-display: swap;
 }
 
@@ -11,7 +11,7 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/montserrat-bold.woff2") format("woff2"),
-    url("../fonts/montserrat-bold.woff") format("woff");
+  src: url("../../fonts/montserrat-bold.woff2") format("woff2"),
+    url("../../fonts/montserrat-bold.woff") format("woff");
   font-display: swap;
 }
