--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -1,14 +1,14 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее*/
 body {
-  margin: 0
+  margin: 0;
 }
 
 img {
-  max-width: 100%
+  max-width: 100%;
 }
 
 a {
-  text-decoration: none
+  text-decoration: none;
 }
 
 *,
