--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -13,3 +13,7 @@ $lightest-grey: #f8f8f8;
 $flat-white: #f3ebe1;
 $lavender-latte: #eae6fc;
 $espresso: #e5e6e8;
+
+$width-mobile: 767px;
+$width-tablet: 768px;
+$width-desktop: 1440px;
