--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -19,6 +19,12 @@
   padding: 22px;
   color: $base-black;
   text-transform: uppercase;
+
+  &:active,
+  &:focus-visible {
+    background-color: $base-secondary;
+    outline: none;
+  }
 }
 
 .user-list__icon {
