--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,3 +1,12 @@
+@import "../global/variables.scss";
+
+.main-nav {
+  width: 100%;
+  @media (min-width: $width-tablet) {
+    display: flex;
+  }
+}
+
 .main-nav--closed .main-nav__toggle {
   @media (max-width: $width-mobile) {
     &::before {
@@ -13,7 +22,7 @@
   }
 }
 
-.main-nav--closed .main-nav__wrapper {
+.main-nav--closed .main-nav__list {
   @media (max-width: $width-mobile) {
     display: none;
   }
@@ -43,7 +52,7 @@
   }
 }
 
-.main-nav--opened .main-nav__wrapper {
+.main-nav--opened .main-nav__list {
   @media (max-width: $width-mobile) {
     position: absolute;
     display: block;
@@ -58,7 +67,7 @@
   display: none;
 }
 
-.main-nav--nojs .main-nav__wrapper {
+.main-nav--nojs .main-nav__list {
   @media (max-width: $width-mobile) {
     position: static;
     display: block;
@@ -78,13 +87,11 @@
   color: $base-black;
   cursor: pointer;
 
-  &:active,
-  &:focus-visible {
+  &:active {
     background-color: $base-secondary;
-    outline: none;
   }
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: $width-mobile) {
     display: none;
   }
 }
