--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -6,10 +6,22 @@
   list-style-type: none;
   background-color: $base-white;
   border-bottom: 1px solid $base-secondary;
+
+  @media (min-width: $width-tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    border: none;
+    margin-left: 150px;
+    max-width: 400px;
+  }
 }
 
 .site-list__item {
   border-top: 1px solid $base-secondary;
+
+  @media (min-width: $width-tablet) {
+    border: none;
+  }
 }
 
 .site-list__link {
@@ -22,9 +34,22 @@
   color: $base-black;
   text-transform: uppercase;
 
-  &:active,
-  &:focus-visible {
+  @media (min-width: $width-tablet) {
+    padding: 32px 20px;
+    letter-spacing: 0.3px;
+
+    &--current {
+      color: $base-primary;
+      box-shadow: inset 0 -2px $base-primary;
+    }
+
+    &:hover,
+    &:focus-visible {
+      color: $base-primary;
+    }
+  }
+
+  &:active {
     background-color: $base-secondary;
-    outline: none;
   }
 }
