--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -6,13 +6,13 @@
 }
 
 .contacts__heading {
-  margin-bottom: 20px;
+  margin: 0 0 20px;
 }
 
 .contacts__text {
   position: relative;
   padding-left: 19px;
-  margin-bottom: 16px;
+  margin: 0 0 16px;
 }
 
 .contacts__icon {
