--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -2,10 +2,16 @@
 
 .social__list {
   display: flex;
-  gap: 0 20px;
+  flex-wrap: wrap;
+  gap: 10px 20px;
   margin: 0;
   padding: 0;
   list-style-type: none;
+  max-width: 160px;
+
+  @media (min-width: $width-tablet) {
+    max-width: 220px;
+  }
 }
 
 .social__item {
