--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -5,7 +5,14 @@
   justify-content: center;
   align-items: center;
   padding: 20px 20px 30px;
-  border-top: 1px solid $base-secondary;
+
+  @media (min-width: $width-tablet) {
+    padding: 10px 0px;
+  }
+
+  @media (min-width: $width-desktop) {
+    padding: 0;
+  }
 }
 
 .copyright__text {
