--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -2,7 +2,16 @@
 
 .menu {
   padding: 20px;
-  border-top: 1px solid $base-secondary;
+  border-bottom: 1px solid $base-secondary;
+
+  @media (min-width: $width-tablet) {
+    padding: 20px 0;
+    border: none;
+  }
+
+  @media (min-width: $width-desktop) {
+    padding: 9px 0 0;
+  }
 }
 
 .menu__heading {
