--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -31,14 +31,17 @@
   }
 }
 
-.main-nav--closed .main-nav__wrapper {
-  @media (max-width: $width-mobile) {
-    display: none;
+.main-nav--closed .main-nav__list {
+  &--secondary {
+    @media (max-width: $width-mobile) {
+      display: none;
+    }
   }
 }
 
 .main-nav--opened .main-nav__toggle {
   @media (max-width: $width-mobile) {
+
     &::before,
     &::after {
       position: absolute;
@@ -60,14 +63,16 @@
   }
 }
 
-.main-nav--opened .main-nav__wrapper {
-  @media (max-width: $width-mobile) {
-    position: absolute;
-    display: block;
-    top: 100%;
-    left: 0;
-    z-index: 10;
-    width: 100%;
+.main-nav--opened .main-nav__list {
+  &--secondary {
+    @media (max-width: $width-mobile) {
+      position: absolute;
+      display: block;
+      top: 100%;
+      left: 0;
+      z-index: 10;
+      width: 100%;
+    }
   }
 }
 
@@ -75,10 +80,12 @@
   display: none;
 }
 
-.main-nav--nojs .main-nav__wrapper {
-  @media (max-width: $width-mobile) {
-    position: static;
-    display: block;
+.main-nav--nojs .main-nav__list {
+  &--secondary {
+    @media (max-width: $width-mobile) {
+      position: static;
+      display: block;
+    }
   }
 }
 
@@ -104,12 +111,14 @@
   }
 }
 
-.main-nav__wrapper {
-  @media (min-width: $width-tablet) {
-    margin: 0 0 0 150px;
-  }
+.main-nav__list {
+  &--secondary {
+    @media (min-width: $width-tablet) {
+      margin: 0 0 0 150px;
+    }
 
-  @media (min-width: $width-desktop) {
-    margin: 0 160px 0 0;
+    @media (min-width: $width-desktop) {
+      margin: 0 160px 0 0;
+    }
   }
 }
