--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -7,7 +7,7 @@
   padding: 20px 20px 30px;
 
   @media (min-width: $width-tablet) {
-    padding: 10px 0px;
+    padding: 10px 0;
   }
 
   @media (min-width: $width-desktop) {
