add promo mobile and tablet

--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -31,6 +31,7 @@
   padding: 22px;
   color: $base-black;
   text-transform: uppercase;
+  letter-spacing: 0.24px;
 
   @media (min-width: $width-tablet) {
     padding: 32px 22px;
