--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -33,7 +33,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.24px;
   color: $base-black;
   text-transform: uppercase;
 
