--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -21,6 +21,7 @@
   }
 
   @media (min-width: $width-desktop) {
-    padding: 30px 105px 60px;
+    padding: 30px 40px 60px 65px;
+    position: relative;
   }
 }
