--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,14 +14,13 @@
 @import "./blocks/page.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/promo.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/swiper-slide.scss";
+@import "./blocks/swiper-pagination.scss";
+@import "./blocks/swiper-button.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/media.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/copyright.scss";
-
-
-@import "./blocks/swiper.scss";
-@import "./blocks/swiper-slide.scss";
-@import "./blocks/swiper-pagination.scss";
