--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -1,14 +1,11 @@
 @import "../global/variables.scss";
 
 .swiper {
-  min-height: 360px;
+  position: relative;
+  min-height: 280px;
 
   @media (min-width: $width-tablet) {
-    min-height: 536px;
-  }
-
-  @media (min-width: $width-desktop) {
-    min-height: 690px;
+    min-height: 640px;
   }
 }
 
@@ -17,11 +14,10 @@
   padding: 20px 20px 60px;
 
   @media (min-width: $width-tablet) {
-    padding: 60px 80px 0;
+    padding: 60px 80px 308px;
   }
 
   @media (min-width: $width-desktop) {
     padding: 30px 40px 60px 65px;
-    position: relative;
   }
 }
