--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -17,7 +17,7 @@
   }
 
   @media (min-width: $width-desktop) {
-    max-width: 270px;
+    max-width: 260px;
     gap: 0 20px;
   }
 }
@@ -40,6 +40,10 @@
     &:focus-visible {
       color: $base-primary;
     }
+  }
+
+  @media (min-width: $width-desktop) {
+    padding: 32px 20px;
   }
 
   &:active {
