--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 /* BLOCKS */
 @import "./blocks/heading-small.scss";
 @import "./blocks/button.scss";
+@import "./blocks/title.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/user-list.scss";
 @import "./blocks/site-list.scss";
@@ -18,6 +19,7 @@
 @import "./blocks/swiper-slide.scss";
 @import "./blocks/swiper-pagination.scss";
 @import "./blocks/swiper-button.scss";
+@import "./blocks/features.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
 @import "./blocks/menu.scss";
