--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,24 +1,19 @@
 @import "../global/variables.scss";
 
-// .features {}
-
 .features__wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 320px;
   margin: 0 auto;
   padding: 50px 20px 60px;
 
   @media (min-width: $width-tablet) {
     width: 768px;
-    padding: 0 20px;
-    padding: 60px 30px 100px;
+    padding: 60px 20px 100px;
   }
 
   @media (min-width: $width-desktop) {
     width: 1440px;
-    padding: 0 40px;
     padding: 100px 40px 120px;
   }
 }
@@ -33,11 +28,19 @@
   text-transform: uppercase;
   letter-spacing: 0.48px;
   order: -1;
+
+  @media (min-width: $width-tablet) {
+    margin: 0 0 4px;
+  }
 }
 
 .features__title {
   margin: 0 0 36px;
   text-align: center;
+
+  @media (min-width: $width-tablet) {
+    margin: 0 0 61px;
+  }
 }
 
 .features__list {
@@ -47,6 +50,12 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: $width-tablet) {
+    display: grid;
+    grid-template-columns: repeat(2, 339px);
+    gap: 50px 30px;
+  }
 }
 
 .features__item {
@@ -54,7 +63,7 @@
   flex-direction: column;
   align-items: center;
 
-  &:before {
+  &::before {
     content: "";
     width: 52px;
     height: 56px;
@@ -69,19 +78,31 @@
 
   &--fit {
     &::before {
-      background: url("../../img/icons/stack.svg#icon-fit") 0 0/56px 52px no-repeat;
+      background: url("../../img/icons/stack.svg#icon-fit") 0 0/52px 56px no-repeat;
     }
   }
 
   &--energy {
     &::before {
-      background: url("../../img/icons/stack.svg#icon-energy") 0 0/56px 52px no-repeat;
+      background: url("../../img/icons/stack.svg#icon-energy") 0 0/52px 56px no-repeat;
     }
   }
 
   &--ecology {
     &::before {
-      background: url("../../img/icons/stack.svg#icon-ecology") 0 0/56px 52px no-repeat;
+      background: url("../../img/icons/stack.svg#icon-ecology") 0 0/52px 56px no-repeat;
+    }
+  }
+
+  @media (min-width: $width-tablet) {
+    position: relative;
+    align-items: flex-start;
+    padding: 0 0 0 82px;
+
+    &::before {
+      position: absolute;
+      left: 10px;
+      top: 1px;
     }
   }
 }
@@ -90,6 +111,12 @@
   margin: 0 0 4px;
   font-size: 18px;
   line-height: 32px;
+
+  @media (min-width: $width-tablet) {
+    margin: 0 0 10px;
+    font-size: 24px;
+    line-height: 36px;
+  }
 }
 
 .features__text {
@@ -97,4 +124,10 @@
   font-size: 14px;
   line-height: 20px;
   text-align: center;
+
+  @media (min-width: $width-tablet) {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: left;
+  }
 }
