--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "./blocks/swiper-pagination.scss";
 @import "./blocks/swiper-button.scss";
 @import "./blocks/features.scss";
+@import "./blocks/map.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
 @import "./blocks/menu.scss";
