--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -19,14 +19,8 @@
   }
 }
 
-.features__signature {
+.features__badge {
   margin: 0 0 5px;
-  color: $base-primary;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 16px;
-  text-transform: uppercase;
-  letter-spacing: 0.48px;
   order: -1;
 
   @media (min-width: $width-tablet) {
