--- a/source/sass/blocks/swiper-slide.scss
+++ b/source/sass/blocks/swiper-slide.scss
@@ -63,15 +63,8 @@
   }
 }
 
-.swiper-slide__signature {
+.swiper-slide__badge {
   margin: 0 0 4px;
-  text-align: center;
-  color: $base-primary;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 16px;
-  text-transform: uppercase;
-  letter-spacing: 0.48px;
 }
 
 .swiper-slide__text {
