--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -12,6 +12,13 @@
   line-height: 24px;
   cursor: pointer;
 
+  &--cart {
+    position: relative;
+    padding: 8px 20px 8px 46px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
   &:hover,
   &:focus-visible {
     background-color: $primary-lighter;
@@ -25,4 +32,32 @@
     background-color: $base-grey;
     cursor: default;
   }
+
+  &--reset {
+    background-color: $base-white;
+    color: $base-primary;
+
+    &:hover,
+    &:focus-visible {
+      color: $base-white;
+    }
+
+    &:active {
+      color: $base-white;
+    }
+
+    &:disabled {
+      background-color: $light-grey;
+      color: $base-white;
+    }
+  }
+}
+
+.button__icon {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 20px;
+  right: auto;
+  margin: auto;
 }
