--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 /* BLOCKS */
 @import "./blocks/heading-small.scss";
 @import "./blocks/button.scss";
+@import "./blocks/badge.scss";
 @import "./blocks/title.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/user-list.scss";
@@ -20,6 +21,10 @@
 @import "./blocks/swiper-pagination.scss";
 @import "./blocks/swiper-button.scss";
 @import "./blocks/features.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/form.scss";
+@import "./blocks/products.scss";
+@import "./blocks/pagination.scss";
 @import "./blocks/map.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
