--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -17,6 +17,10 @@
   }
 
   @media (min-width: $width-desktop) {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, min-content);
+    gap: 40px 30px;
     width: 1440px;
     padding: 100px 40px 120px;
   }
@@ -26,6 +30,11 @@
   display: flex;
   flex-direction: column;
   margin: 0 0 20px;
+
+  @media (min-width: $width-desktop) {
+    grid-area: 1/1/2/-1;
+    margin: 0;
+  }
 }
 
 .catalog__title {
@@ -39,4 +48,12 @@
 
 .catalog__form {
   margin: 0 0 36px;
+
+  @media (min-width: $width-tablet) {
+    margin: 0 0 40px;
+  }
+
+  @media (min-width: $width-desktop) {
+    margin: 0;
+  }
 }
