--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,6 +3,13 @@
 .form {
   display: flex;
   flex-direction: column;
+
+  @media (min-width: $width-tablet) and (max-width: $width-tablet-max) {
+    display: grid;
+    grid-template-columns: repeat(3, 223px);
+    grid-template-rows: repeat(2, min-content);
+    gap: 40px 30px;
+  }
 }
 
 .form__group {
@@ -26,8 +33,22 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+
+  @media (min-width: $width-tablet) {
+    flex-direction: row;
+    justify-content: center;
+    grid-area: -1/1/-2/-1;
+  }
+
+  @media (min-width: $width-desktop) {
+    justify-content: flex-start;
+  }
 }
 
 .form__button:first-child {
   margin: 0 0 20px;
+
+  @media (min-width: $width-tablet) {
+    margin: 0 20px 0 0;
+  }
 }
