--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -9,7 +9,7 @@
 
   @media (min-width: $width-tablet) {
     justify-content: flex-end;
-    margin: 0 0 26px 3px;
+    margin: 0 0 26px 0;
   }
 }
 
