--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -13,17 +13,34 @@
 }
 
 .form__group {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
   padding: 0;
   margin: 0 0 30px;
   border: none;
 
+  @media (min-width: $width-tablet) and (max-width: $width-tablet-max) {
+    margin: 0;
+  }
+
   &--milk {
     margin: 0 0 34px;
+
+    @media (min-width: $width-tablet) and (max-width: $width-tablet-max) {
+      margin: 0;
+    }
+  }
+
+  &--country {
+    @media (min-width: $width-desktop) {
+      margin: 0 0 40px;
+    }
   }
 }
 
 .form__heading {
-  margin: 0 0 20px;
+  margin: 0;
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
