--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -31,7 +31,7 @@
   color: $base-primary;
   border: none;
   appearance: none;
-  letter-spacing: -.2px;
+  letter-spacing: -0.2px;
 
   &:hover,
   &:focus-visible {
@@ -81,7 +81,7 @@
 
   &:hover,
   &:focus-visible {
-    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
   }
 }
 
