--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,8 @@
 @import "./blocks/features.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/form.scss";
+@import "./blocks/radio.scss";
+@import "./blocks/checkbox.scss";
 @import "./blocks/products.scss";
 @import "./blocks/pagination.scss";
 @import "./blocks/map.scss";
