--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -18,7 +18,7 @@
 
   @media (min-width: $width-desktop) {
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 318px auto;
     grid-template-rows: repeat(2, min-content);
     gap: 40px 30px;
     width: 1440px;
