--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 @import "./blocks/catalog.scss";
 @import "./blocks/form.scss";
 @import "./blocks/range.scss";
+@import "./blocks/number.scss";
 @import "./blocks/radio.scss";
 @import "./blocks/checkbox.scss";
 @import "./blocks/products.scss";
