--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,10 +5,10 @@
 @import "./global/visually-hidden.scss";
 
 /* BLOCKS */
-@import "./blocks/heading-small.scss";
 @import "./blocks/button.scss";
 @import "./blocks/badge.scss";
 @import "./blocks/title.scss";
+@import "./blocks/title-small.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/user-list.scss";
 @import "./blocks/site-list.scss";
