--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -20,7 +20,7 @@
   font-size: 12px;
   line-height: 16px;
   color: $base-grey;
-  letter-spacing: -0.2px;
+  // letter-spacing: -0.2px;
 }
 
 .copyright__link {
@@ -30,7 +30,7 @@
   font-size: 12px;
   line-height: 16px;
   color: $base-grey;
-  letter-spacing: -0.2px;
+  // letter-spacing: -0.2px;
 
   &:hover,
   &:focus-visible {
