--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -119,6 +119,7 @@
   margin: 0 0 4px;
   font-size: 18px;
   line-height: 32px;
+  font-weight: 700;
 
   @media (min-width: $width-tablet) {
     margin: 0 0 10px;
