--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -3,8 +3,8 @@
 .products__group-select {
   display: flex;
   align-items: center;
-  margin: 0 0 15px 3px;
-  padding: 0;
+  margin: 0 0 15px;
+  padding: 1px 0 0;
   border: none;
 
   @media (min-width: $width-tablet) {
@@ -18,7 +18,6 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
-  letter-spacing: -0.2px;
 }
 
 .products__select {
@@ -31,7 +30,6 @@
   color: $base-primary;
   border: none;
   appearance: none;
-  letter-spacing: -0.2px;
 
   &:hover,
   &:focus-visible {
@@ -52,7 +50,7 @@
 .products__list {
   display: grid;
   gap: 20px 0;
-  margin: 0 0 40px;
+  margin: 0 0 41px;
   padding: 0;
   list-style-type: none;
 
@@ -107,6 +105,7 @@
   margin: 0 0 4px;
   font-size: 18px;
   line-height: 32px;
+  font-weight: 700;
 
   @media (min-width: $width-tablet) {
     margin: 0 0 9px;
@@ -133,4 +132,5 @@
   transform: translateX(-2px);
   font-size: 20px;
   line-height: 32px;
+  font-weight: 600;
 }
