--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -22,6 +22,10 @@
   font-size: 16px;
   line-height: 24px;
 
+  &--text {
+    padding: 8px 20px;
+  }
+
   &:hover:not(:disabled),
   &:focus-visible {
     color: $base-white;
