--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -20,7 +20,7 @@
     display: grid;
     grid-template-columns: 318px auto;
     grid-template-rows: repeat(2, min-content);
-    gap: 41px 30px;
+    gap: 36px 30px;
     width: 1440px;
     padding: 100px 40px 120px;
   }
@@ -55,5 +55,6 @@
 
   @media (min-width: $width-desktop) {
     margin: 0;
+    padding: 5px 0 0;
   }
 }
