--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -22,8 +22,10 @@
   font-size: 16px;
   line-height: 24px;
 
-  &--text {
-    padding: 8px 20px;
+  @media (min-width: $width-tablet) {
+    &--text {
+      padding: 8px 20px;
+    }
   }
 
   &:hover:not(:disabled),
