--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -18,8 +18,8 @@
 
   @media (min-width: $width-desktop) {
     display: grid;
-    grid-template-columns: 318px auto;
-    grid-template-rows: repeat(2, min-content);
+    grid-template: repeat(2, min-content) / 318px auto;
+    grid-template-areas: "text text" "form products";
     gap: 36px 30px;
     width: 1440px;
     padding: 100px 40px 120px;
@@ -32,7 +32,7 @@
   margin: 0 0 20px;
 
   @media (min-width: $width-desktop) {
-    grid-area: 1/1/2/-1;
+    grid-area: text;
     margin: 0;
   }
 }
@@ -56,5 +56,10 @@
   @media (min-width: $width-desktop) {
     margin: 0;
     padding: 5px 0 0;
+    grid-area: form;
   }
+}
+
+.catalog__products {
+  grid-area: products;
 }
