--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -5,7 +5,7 @@
   border-bottom: 1px solid $base-secondary;
 
   @media (min-width: $width-tablet) {
-    padding: 20px 0;
+    padding: 0;
     border: none;
   }
 
