--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -23,7 +23,7 @@
   }
 }
 
-.main-footer__container {
+.main-footer__link-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
