--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -19,6 +19,7 @@
   color: $base-primary;
   background-color: $base-white;
   border: none;
+  border-radius: 4px;
   font-size: 16px;
   line-height: 24px;
 
