--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-wrap: wrap;
     border: none;
-    max-width: 400px;
+    max-width: 60%;
   }
 
   @media (min-width: $width-desktop) {
