--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,7 +6,7 @@
 
   @media (min-width: $width-tablet) and (max-width: $width-tablet-max) {
     display: grid;
-    grid-template: repeat(2, min-content) / repeat(3, 223px);
+    grid-template: repeat(2, min-content) / repeat(3, 1fr);
     gap: 40px 30px;
   }
 }
