--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -55,7 +55,7 @@
   list-style-type: none;
 
   @media (min-width: $width-tablet) {
-    grid-template-columns: repeat(2, 349px);
+    grid-template-columns: repeat(2, 1fr);
     gap: 30px;
     margin: 0 0 71px;
   }
