--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -10,14 +10,14 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  max-width: 180px;
+  max-width: 56%;
 
   @media (min-width: $width-tablet) {
     position: static;
   }
 
   @media (min-width: $width-desktop) {
-    max-width: 261px;
+    max-width: 300px;
     gap: 0 20px;
   }
 }
