--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -8,8 +8,9 @@
 }
 
 .page__body {
+  display: flex;
+  flex-direction: column;
   min-height: 100%;
-  display: grid;
+  min-width: 320px;
   color: $base-black;
-  grid-template-rows: min-content 1fr min-content;
 }
