--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,11 +15,9 @@
 @import "./blocks/main-nav.scss";
 @import "./blocks/page.scss";
 @import "./blocks/main-container.scss";
-@import "./blocks/promo.scss";
-@import "./blocks/swiper.scss";
-@import "./blocks/swiper-slide.scss";
-@import "./blocks/swiper-pagination.scss";
-@import "./blocks/swiper-button.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/slider-pagination.scss";
+@import "./blocks/slider-button.scss";
 @import "./blocks/features.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/form.scss";
