--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,14 +5,15 @@
 @import "./global/visually-hidden.scss";
 
 /* BLOCKS */
+@import "./blocks/toggle.scss";
 @import "./blocks/button.scss";
 @import "./blocks/badge.scss";
 @import "./blocks/title.scss";
 @import "./blocks/title-small.scss";
-@import "./blocks/main-header.scss";
+@import "./blocks/header.scss";
+@import "./blocks/nav.scss";
 @import "./blocks/user-list.scss";
 @import "./blocks/site-list.scss";
-@import "./blocks/main-nav.scss";
 @import "./blocks/page.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/slider.scss";
@@ -28,7 +29,7 @@
 @import "./blocks/products.scss";
 @import "./blocks/pagination.scss";
 @import "./blocks/map.scss";
-@import "./blocks/main-footer.scss";
+@import "./blocks/footer.scss";
 @import "./blocks/social.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/media.scss";
