--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -19,6 +19,10 @@
   margin: 0 0 20px;
 }
 
+.contacts__address {
+  font-style: normal;
+}
+
 .contacts__text {
   position: relative;
   padding: 0 0 0 19px;
