--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -1,57 +1,76 @@
 @import "../global/variables.scss";
 
-.radio {
+.radio__label {
   position: relative;
+  display: block;
   padding: 0 0 0 34px;
   font-size: 16px;
   line-height: 24px;
   cursor: pointer;
-}
 
-.radio__input:checked + .radio__mark {
-  box-shadow: inset 0 0 0 2px $base-primary;
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 2px $base-grey;
+  }
 
   &::after {
     position: absolute;
     content: "";
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 4px;
+    left: 4px;
     width: 16px;
     height: 16px;
     border-radius: 50%;
+  }
+}
+
+.radio__input:checked+.radio__label {
+  &::before {
+    box-shadow: inset 0 0 0 2px $base-primary;
+  }
+
+  &::after {
     background-color: $base-primary;
   }
 }
 
-.radio__mark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  box-shadow: inset 0 0 0 2px $base-grey;
-}
-
-.radio__input:hover:not(:disabled) + .radio__mark,
-.radio__input:focus-visible + .radio__mark {
-  box-shadow: inset 0 0 0 2px $primary-lighter;
+.radio__input:hover:not(:disabled)+.radio__label,
+.radio__input:focus-visible+.radio__label {
+  &::before {
+    box-shadow: inset 0 0 0 2px $primary-lighter;
+  }
 
   &::after {
     background-color: $primary-opacity;
   }
 }
 
-.radio__input:active:not(:disabled) + .radio__mark {
-  box-shadow: inset 0 0 0 2px $base-primary;
+.radio__input:active:not(:disabled)+.radio__label {
+  &::before {
+    box-shadow: inset 0 0 0 2px $primary-darker;
+  }
+
+  &::after {
+    background-color: $primary-opacity;
+  }
 }
 
-.radio__input:disabled + .radio__mark {
-  box-shadow: inset 0 0 0 2px $light-grey;
-  cursor: default;
+.radio__input:disabled+.radio__label {
+  color: $base-grey;
+  cursor: not-allowed;
 
+  &::before {
+    box-shadow: inset 0 0 0 2px $light-grey;
+  }
+}
+
+.radio__input:checked:disabled+.radio__label {
   &::after {
     background-color: $light-grey;
   }
