--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -58,8 +58,12 @@
 
   @media (min-width: $width-desktop) {
     display: inline;
-    margin: 0 0 50px;
+    margin: 0 0 10px;
   }
+}
+
+.footer__social {
+  margin-top: auto;
 }
 
 .footer__menu {
