--- a/source/sass/blocks/number.scss
+++ b/source/sass/blocks/number.scss
@@ -52,7 +52,7 @@
   &:disabled {
     background-color: $lightest-grey;
     box-shadow: inset 0 0 0 2px $light-grey;
-    cursor: default;
+    cursor: not-allowed;
   }
 
   &::placeholder {
