--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -35,6 +35,17 @@
   box-shadow: inset 0 0 0 2px $primary-lighter;
   cursor: pointer;
 
+  &::before {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+  }
+
   &--min {
     top: 50%;
     left: 12px;
@@ -49,18 +60,24 @@
 
   &:hover,
   &:focus-visible {
-    box-shadow: inset 0 0 0 2px $primary-lighter, inset 0 0 0 4px $base-white, inset 0 0 0 12px $primary-opacity;
     outline: none;
+
+    &::before {
+      background-color: $primary-opacity;
+    }
   }
 
   &:active {
-    box-shadow: inset 0 0 0 2px $primary-lighter, inset 0 0 0 4px $base-white, inset 0 0 0 12px $primary-lighter;
-    outline: none;
+    box-shadow: inset 0 0 0 2px $primary-darker;
+
+    &::before {
+      background-color: $primary-lighter;
+    }
   }
 
   &:disabled {
     background-color: $lightest-grey;
     box-shadow: inset 0 0 0 2px $base-grey;
-    cursor: default;
+    cursor: not-allowed;
   }
 }
